[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dts"
version = "0.1.0"
description = "a model-agnostic decoding framework for efficient reasoning"
readme = "README.md"
requires-python = ">=3.10"

license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "torch==2.6.0",
    "transformers==4.54.0",
    "numpy",
    "datasets",
    "scikit-learn",
    "tqdm",
    "tiktoken",
    "accelerate",
    "pyyaml",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["decoding_tree_sketching*"]
