[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dts"
version = "0.1.0"
description = "Decoding Tree Sketching: a model-agnostic decoding framework for efficient reasoning"
readme = "README.md"
requires-python = ">=3.10"

license = { file = "../LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
  "accelerate>=1.0",
  "datasets>=3.0",
  "numpy>=1.26",
  "PyYAML>=6.0",
  "scikit-learn>=1.5",
  "tiktoken>=0.7",
  "torch>=2.4",
  "tqdm>=4.66",
  "transformers>=4.44",
  "vllm>=0.8",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["decoding_tree_sketching*"]
